음성인식 예약어 모두 추가 및 마무리 작업

--- a/CBNU_Kiosk_main/bugger/templates/bugger/old_confirm.html
+++ b/CBNU_Kiosk_main/bugger/templates/bugger/old_confirm.html
@@ -324,6 +324,51 @@ function startSpeechRecognition() {
                             modal.hide();
                         });
                 }
+                else if(data.stt=='결제'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+                        go_pay()
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                else if(data.stt=='결제해줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+                        go_pay()
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                 else if(data.stt=='결제 해줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+                        go_pay()
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                 else if(data.stt=='결제 해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+                        go_pay()
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
+                 else if(data.stt=='결제해 줘'){
+                     var modal = new bootstrap.Modal(document.getElementById('portfolioModal_card'));
+                        modal.show();
+                        go_pay()
+                        // 모달 창 내부의 "결제 취소" 버튼 클릭 시 모달 닫기
+                        document.querySelector('#portfolioModal_card button[data-bs-dismiss="modal"]').addEventListener('click', function () {
+                            modal.hide();
+                        });
+                }
 
 
                   else {
